--- a/bytenba/www/css/style.css
+++ b/bytenba/www/css/style.css
@@ -30,8 +30,10 @@ body {
   }
   
   .logo{
-      width: 80px;
+      width: 70px;
       cursor: pointer;
+      padding-top: 10px;
+      padding-left: 20px;
   }
   
   .heading_container {
